<resources>
    <string name="app_name">All Video Downloader</string>

    <string name="kk_error_empty_edit">Please Enter Something</string>
    <string name="kk_error_unknown">An unknown error occurred</string>
    <string name="kk_error_try_again">Something went wrong! Please try again.</string>
    <string name="kk_error_try_later">"Something went wrong! Try Again Later."</string>
    <string name="kk_error_no_data">No Data Available …</string>
    <string name="kk_error_no_internet">Please Check Your Internet …</string>

    <string name="kk_loading_please_wait">Loading Please Wait</string>
    <string name="kk_fetching_please_wait">Fetching Please Wait</string>

    <string name="kk_ok">OK</string>
    <string name="kk_retry">Retry</string>
    <string name="kk_continue">Continue</string>
    <string name="kk_submit">Submit</string>
    <string name="kk_cancel">Cancel</string>
    <string name="kk_yes">Yes</string>
    <string name="kk_no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_or_paste_url_here">Enter or Paste Url Here</string>
    <string name="gallery">Gallery</string>
    <string name="how_to_use">How to Use</string>
    <string name="download">Download</string>

    <string name="paste_download_link">Paste Link to Download Video or Image</string>
    <string name="downloaded_media">Downloaded Media</string>
    <string name="how_to_download">How to Download ?</string>
    <string name="wa_status">WA Status</string>
    <string name="music_player">Music Player</string>
    <string name="video_player">Video Player</string>
    <string name="video_downloader">Video Downloader</string>
    <string name="chingari">Chingari</string>
    <string name="josh">Josh</string>
    <string name="paste">Paste</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
</resources>