<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activity.MainActivity">

    <include
        android:id="@+id/includedToolbar"
        layout="@layout/layout_toolbar" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical"
        app:constraint_referenced_ids="btnStatus,btnChingari,btnJosh"
        app:flow_verticalAlign="center"
        app:flow_verticalGap="@dimen/_15sdp"
        app:flow_verticalStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includedToolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStatus"
        style="@style/txtNormalButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/wa_status"
        android:theme="@android:style/ThemeOverlay.Material.Dark" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChingari"
        style="@style/txtNormalButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/chingari"
        android:theme="@android:style/ThemeOverlay.Material.Dark" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJosh"
        style="@style/txtNormalButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/josh"
        android:theme="@android:style/ThemeOverlay.Material.Dark" />




</androidx.constraintlayout.widget.ConstraintLayout>