<?xml version="1.0" encoding="utf-8"?>
<com.kraaft.video.manager.views.RoundedLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    android:visibility="gone"
    android:id="@+id/cvSelection"
    app:backgroundColor="#4d000000"
    app:cornerLeftTop="@dimen/corner_size"
    app:cornerRightTop="@dimen/corner_size">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_10sdp"
        app:constraint_referenced_ids="cvSelect,cvDownload,cvDelete"
        app:flow_horizontalGap="@dimen/_25sdp"
        app:flow_horizontalStyle="packed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.kraaft.video.manager.utils.SafeCheckBox
            android:id="@+id/ivCheckBox"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_oval_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSelect"
            style="@style/fontMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/select_all"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCheckBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivDownload"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_oval_shape"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDownload"
            style="@style/fontMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/download"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDownload" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_oval_shape"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDelete"
            style="@style/fontMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/delete"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.kraaft.video.manager.views.RoundedLayout>