<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <include
        android:id="@+id/includedToolbar"
        layout="@layout/layout_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includedToolbar">


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_chingari"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvHeader"
            style="@style/fontMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/paste_download_link"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cvEditBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader">

            <EditText
                android:id="@+id/etUrl"
                style="@style/fontMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@null"
                android:hint="@string/enter_or_paste_url_here"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/colorTitle"
                android:textColorHint="@color/colorTitle"
                android:textSize="@dimen/_14ssp"
                  app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/cvEditBox">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPaste"
                style="@style/txtNormalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorCommon"
                android:gravity="center"
                android:text="@string/paste"
                android:textColor="@color/colorTitle"
                android:theme="@android:style/ThemeOverlay.Material.Dark"
                app:icon="@drawable/ic_gallery"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                app:iconSize="@dimen/_15sdp"
                app:iconTint="@color/colorTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDownload"
                style="@style/txtNormalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/download"
                android:theme="@android:style/ThemeOverlay.Material.Dark"
                app:icon="@drawable/ic_download"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                app:iconSize="@dimen/_15sdp"
                app:iconTint="@color/colorWhite" />

        </LinearLayout>

        <com.kraaft.video.manager.views.RoundedLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/colorWhite"
            app:cornerLeftTop="@dimen/corner_size"
            app:cornerRightTop="@dimen/corner_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llButtons">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cvMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMedia"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/includedError"
                layout="@layout/layout_error" />

        </com.kraaft.video.manager.views.RoundedLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>